# Hex-Encryptor

./: .gitignore  .gitlab-ci.yml  Android.mk  Gemfile  README.md  extract_pubkey_hash.sh  git-clone-deps.sh
config/: encrypt_script.rb  script.cpp  script.h  secrets.txt  secrets.yaml  spread_string.rb  strings.cpp.erb  strings.h.erb
proj.ios_mac/active_secret.xcodeproj/: project.pbxproj
proj.ios_mac/active_secret.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
proj.ios_mac/active_secret.xcodeproj/project.xcworkspace/xcshareddata/: active_remote.xccheckout
proj.win10/: active_secret.vcxproj
src/: asymmetric_evp.cpp  asymmetric_evp.h  base64.hpp  strings.h  symmetric_aes.cpp  symmetric_aes.h  symmetric_evp.cpp  symmetric_evp.h
test/: CMakeLists.txt
test/src/: active_secret_tests.cpp  test_runner.cpp
